styling getting closer to completion

--- a/webpage/todo
+++ b/webpage/todo
@@ -21,6 +21,12 @@ todo:
 
 			bar graph...
 
+	on click:
+		first to log awful pics, then grap 2 or 4 from media ect
+		than basketball reference link
+		(cp meteor code...)
+
+	how to hide  mssing image/
 
 	slider
 		updating stats anywhere?
@@ -42,4 +48,16 @@ todo:
 	remove missing image pic
 	left right
 
+	change font to corrier
 
+
+	neg rectagles
+		still not fixed!
+
+	team mouseover/
+		click
+			black border AND text
+
+	change color again?
+
+	change hover cusor
